# html-watcher

./: .env.example  .gitignore  Cargo.toml  README.md
src/: discord.rs  main.rs  notifier.rs
