[package]
name = "html-watcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.77"
dotenv = "0.15.0"
reqwest = { version = "0.11.24", features = ["json"] }
serde_json = "1.0.113"
similar = "2.4.0"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
